# hypnos

./: README.md  auto_wordle.py  casse_brique_bot.py  config.json  main.py  pyproject.toml  requirements.txt  snake.py  trivia_bde.py  trivia_clubs.py  trivia_listeux.py  wordle_db.json
src/hypnos/: __init__.py  cli.py  lib.py
src/hypnos/breakout/: solve.py  train.py
src/hypnos/breakout/data/: config.json
src/hypnos/minesweeper/: solver.py
src/hypnos/snake/: __init__.py  models.py  solve.py  train.py
src/hypnos/snake/data/: payload.json
src/hypnos/trivia/: solve.py  train.py
src/hypnos/trivia/data/: themes.json
src/hypnos/twothousandfortyeight/: solve.py
src/hypnos/wordle/: __init__.py  solve.py  train.py
