[project]
name = "hypnos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
